src/test/deca/syntax/invalid/synt/include_invalid_file_name.deca
/*
    Description : Inclusion d'un fichier avec un nom invalide

    Résultat : Erreur syntaxique
*/
#include "invalid_file_name_$.decah"
